...
 */
object NavigationTestTags {

  const val BACK_BUTTON = "GoBackButton"

  // SCREENS
  const val MAP_SCREEN = "MapScreen"
  const val MAP_INSTANCE_SCREEN = "MapInstanceScreen"
  const val EVENT_SCREEN = "EventsScreen"
  const val CHAT_SCREEN = "ChatScreen"
  const val CHAT_INSTANCE_SCREEN = "ChatInstanceScreen"
  const val PROFILE_SCREEN = "ProfileScreen"
  const val OTHER_PROFILE_SCREEN = "OtherProfileScreen"
  const val SIGN_IN_SCREEN = "SignInScreen"
  const val ADD_PROFILE_SCREEN = "AddProfileScreen"
  const val SEARCH_PROFILE_SCREEN = "SearchProfileScreen"
  const val SETTINGS_SCREEN = "SettingsScreen"
  const val SELECT_TAG_SCREEN_USER = "SelectTagScreenUser"
  const val SELECT_TAG_SCREEN_EVENT = "SelectTagScreenEvent"
  const val SELECT_TAG_SCREEN_EVENT_EDITION = "SelectTagScreenEventEdition"
  const val SELECT_TAG_SCREEN_SETTINGS = "SelectTagScreenSettings"
  const val EMAIL_VALIDATION_SCREEN = "EmailValidationScreen"
  const val EVENT_CREATION_SCREEN = "EventCreationScreen"
  const val EVENT_EDITION_SCREEN = "EventEditionScreen"
  const val SELECT_LOCATION_SCREEN = "SelectLocationScreen"
  const val MAP_CHANGE_LOCATION = "MapChangeLocation"

  // BOTTOM NAVIGATION MENU
  const val BOTTOM_NAVIGATION_MENU = "BottomNavigationMenu"
  const val CHAT_TAB = "ChatTab"
  const val EVENT_TAB = "EventsTab"
  const val MAP_TAB = "MapTab"
  const val PROFILE_TAB = "ProfileTab"
  const val COMMUNITY_TAB = "CommunityTab"

  /**
   * Returns the appropriate test tag for a given [Tab] in the bottom navigation menu. This allows
   * tests to dynamically find the correct tab based on the navigation state.
   *
   * @param tab The [Tab] for which to get the test tag.
...
