...
      }
}

object GeneralTimePopUpTestTags {
  val TIME_PICKER_DIALOG = "time_picker_dialog"
  val TIME_PICKER = "time_picker"
  val CONFIRM_BUTTON = "confirm_button"
  val CANCEL_BUTTON = "cancel_button"
}

